<resources>
    <string name="app_name">Mi Kit</string>
    <string name="Tips_Title">温馨提示</string>
    <!--<string name="Tips_Processing">正在处理中,可能需要花费数分钟时间...</string>-->
    <string name="Tips_No_Root">尚未获取Root权限,部分功能将被禁用！</string>
    <string name="Btn_Cancel">取消</string>
    <string name="Btn_Sure">确定</string>
    <string name="Tips_Title_Error">错误</string>
    <string name="Tips_Reboot">你确定要重启吗？</string>
    <string name="Tips_HotBoot">你确定要快速重启吗？</string>
    <string name="Tips_Need_Root">软件运行需要ROOT权限，\n点击确定开始授权.</string>
    <string name="Label_Hidden_Icon">隐藏应用图标</string>
    <string name="Label_Google_Access">常见国外网站Hosts</string>
    <string name="Label_No_MIUI_Update">屏蔽MIUI更新检测</string>
    <string name="Label_Core_Patch">Android核心校验破解</string>
    <string name="Label_NO_AD">屏蔽一些常见的广告</string>
    <string name="Label_NO_MIUI_AD">屏蔽大部分MIUI广告</string>
    <string name="Label_NO_SearchBar">移除下拉菜单搜索框</string>
    <string name="Label_Theme_Patch">MIUI主题和谐(旧版本通用)</string>
    <string name="Menu_HotBoot">快速重启系统</string>
    <string name="Menu_Reboot">重启系统</string>
    <string name="label_Other_Settings">通用设置</string>
    <string name="Label_Common_Settings">通用设置</string>
    <string name="Label_MIUI_Settings">MIUI相关</string>
    <string name="Label_About">关于</string>
    <string name="Label_MyName">作者:油炸包子</string>
    <string name="Label_Version">版本:1.7.6 正式版</string>
    <string name="Version">1.7.6</string>
    <string name="Label_MyBlog">我的博客:<u>blog.coderstory.cn</u></string>
    <string name="tebieshuoming">特别说明</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="texts">&lt;h6>1、先决条件&lt;/h6> &lt;p>&amp;emsp;&amp;emsp;为使模块工作所需要 &lt;a href=http://forum.xda-developers.com/xposed/unofficial-xposed-miui-t3367634>Xposed&lt;/a> 框架和安装 &lt;a href=http://repo.xposed.info/module/de.robv.android.xposed.installer>Xposed Installer&lt;/a> 应用程序. &lt;b>如果没有这个模块将无法正常工作！&lt;/b>&lt;br> 有关如何在您的设备安装Xposed框架请寻找与您的设备相关的论坛的信息。&lt;/p> &lt;h6>2、设置您的设备&lt;/h6> &lt;p>&amp;emsp;&amp;emsp;在安装Xposed框架和Xposed应用程序后，你必须在安全中心允许Xposed开机启动,神隐模式下设置为无限制。&lt;/p> &lt;h6>3、模块的安装&lt;/h6> &lt;p>&amp;emsp;&amp;emsp;该模块会安装为一个常规应用程序。&lt;br> &amp;emsp;&amp;emsp;该模块第一次安装后，必须在Xposed模块界面勾选激活，然后重新启动设备。&lt;br> &amp;emsp;&amp;emsp;如果执行步骤 2，你应该在Xposed看到新的模块已安装，但尚未激活的通知。&lt;/p> &lt;h6>4、更新模块&lt;/h6> &lt;p>&amp;emsp;&amp;emsp;更新模块也发生在常规应用程序更新。&lt;br> &amp;emsp;&amp;emsp;如果你执行了步骤2,那么Xposed应该会发出新的模块已安装，需要重启你的设备的通知。&lt;br> &amp;emsp;&amp;emsp;&lt;b>如果不出现此通知，升级后模块需要手动打开Xposed，去模块选项卡，取消勾选，然后再重新勾选再重新启动设备！&lt;/b>&lt;/p> &lt;h6>5、卸载模块&lt;/h6> &lt;p>&amp;emsp;&amp;emsp;把该模块当做是一个普通的应用程序正常卸载即可。&lt;/p></string>
    <string name="alipay_url">https://qr.qr_alipay.com/aex087445gnaa6gawjaohe8</string>
    <string name="myblog_url">http://blog.coderstory.cn</string>
    <string name="App_Update">软件升级</string>
    <string name="Update">更新</string>
    <string name="Create_DownlodFile_Fail">创建下载文件失败!</string>
    <string name="Delete_OldFile_Fail">旧数据删除失败!</string>
    <string name="Downloading">正在下载</string>
    <string name="Download_Fail">下载失败，请重试。</string>
    <string name="Download_Success">下载完成,点击安装。</string>
    <string name="Working">正在处理中</string>
    <string name="Waiting">可能需要花费数分钟时间...</string>
    <string name="Tips_NO_SDCARD_Permission">尚未获得存储卡的读写权限，App在线功能已被禁用！</string>
    <string name="Tips_FirstOpen">您是第一次打开本软件，是否阅读使用帮助？</string>
    <string name="Label_Waring">警告</string>
    <string name="Tips_Start_Get_Root">本软件的正常运行需要root权限,点击确定开始授权。\r\n\r\nPS:点击确定后无反应基本是禁止supersu自启导致的</string>
    <string name="Tips_No_XP_Enable">检测到本模块未在Xposed框架中激活,部分功能将无法使用！\r\n\r\n请在Xposed中勾选本模块并重启系统，如还是出现提示则请卸载后重新安装.</string>
    <string name="DisableAppBtn">&#160;&#160;冻结应用&#160;&#160;</string>
    <string name="DisabeAppLable">冻结应用</string>
    <string name="disableapptips">提示：点击应用名可切换冻结状态</string>
    <string name="isloading">正在加载，请稍后。。。</string>
    <string name="loadappinfo">正在加载应用信息。。。</string>
    <string name="sureAntiDisable">你确定要解除 &#160;</string>
    <string name="sureDisable">你确定要冻结&#160; </string>
    <string name="btnUnDisable">解冻</string>
    <string name="btnDissable">冻结</string>
    <string name="sureDisableAfter"> &#160;吗？</string>
    <string name="sureAntiDisableAfter"> &#160;的冻结状态吗？</string>
</resources>