<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1200px"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:text="@string/Label_MIUI_Settings" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="10dp"
                android:background="#dc484b4b" />

            <Switch
                android:id="@+id/ThemePatcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_below="@+id/line2"
                android:layout_marginTop="55dp"
                android:checked="false"
                android:clickable="true"
                android:contextClickable="false"
                android:text="@string/Label_Theme_Patch" />

            <Switch
                android:id="@+id/ThemePatcher3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:checked="false"
                android:clickable="true"
                android:contextClickable="false"
                android:text="MIUI主题和谐(MIUI8模式)"
                android:layout_below="@+id/ThemePatcher"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />
            <Switch
                android:id="@+id/RemoveSearchBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ThemePatcher3"
                android:layout_marginTop="25dp"
                android:checked="false"
                android:clickable="true"
                android:text="@string/Label_NO_SearchBar" />

            <Switch
                android:id="@+id/RemoveAds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/RemoveSearchBar"
                android:layout_marginTop="23dp"
                android:checked="false"
                android:text="@string/Label_NO_MIUI_AD" />



            <Switch
                android:id="@+id/NoStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/RemoveAds"
                android:layout_marginTop="25dp"
                android:checked="false"
                android:text="屏蔽商店,音乐和视频(hosts方法)" />

            <Switch
                android:id="@+id/RemoveAdshosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/NoStore"
                android:layout_marginTop="25dp"
                android:checked="false"
                android:text="@string/Label_NO_AD" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/RemoveAdshosts"
                android:layout_marginTop="25dp"
                android:text="@string/label_Other_Settings" />

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"

                android:layout_marginTop="10dp"
                android:background="#dc484b4b" />

            <Switch
                android:id="@+id/switchIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="30dp"
                android:checked="false"
                android:text="@string/Label_Hidden_Icon" />

            <TextView
                android:id="@+id/textView88"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/switchIcon"
                android:layout_marginTop="50dp"
                android:text="关于" />
            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView88"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="#dc676969" />

            <TextView
                android:id="@+id/textView889"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/view7"
                android:layout_marginBottom="25dp"
                android:text="关于应用"
                android:onClick="openAbout"
                android:textColor="#000000" />




        </RelativeLayout>
    </ScrollView>
</LinearLayout>